--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,9 @@ dependencies:
 
   flutter_app_name: ^0.1.1
   flutter_launcher_icons: ^0.11.0
-  cupertino_icons: ^1.0.2
+  sqflite: ^2.3.0
   get: ^4.6.6
   intl: ^0.18.1
-  multi_select_flutter: ^4.1.3
   horizontal_calendar: ^1.1.2
 
 flutter_app_name:
@@ -28,6 +27,8 @@ flutter_icons:
   ios: true
   image_path: 'assets/favicon.png'
   min_sdk_android: 21
+  adaptive_icon_background: '#0D253F'
+  adaptive_icon_foreground: 'assets/favicon.png'
 
 dev_dependencies:
   flutter_test:
