--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,28 +11,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_app_name: ^0.1.1
-  flutter_launcher_icons: ^0.11.0
+  get: ^4.6.5
   sqflite: ^2.3.0
-  get: ^4.6.6
-  intl: ^0.18.1
-  horizontal_calendar: ^1.1.2
-
-flutter_app_name:
-  name: 'Task Management'
-
-flutter_icons:
-  android: 'launcher_icon'
-  ios: true
-  image_path: 'assets/favicon.png'
-  min_sdk_android: 21
-  adaptive_icon_background: '#0D253F'
-  adaptive_icon_foreground: 'assets/favicon.png'
+  connectivity_plus: ^5.0.1
+  flutter_slidable: ^3.0.1
+  flutter_staggered_grid_view: ^0.7.0
+  pull_to_refresh: ^2.0.0
+  #system_notifications: ^0.0.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
+  sqflite_common_ffi: ^2.3.0
 
   flutter_lints: ^3.0.1
 
