--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,14 @@ dependencies:
   flutter_slidable: ^3.0.1
   flutter_staggered_grid_view: ^0.7.0
   pull_to_refresh: ^2.0.0
-  #system_notifications: ^0.0.1
   uuid: ^4.2.1
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.4.2
-  build_runner: ^2.4.6
-  sqflite_common_ffi: ^2.3.0
 
   flutter_lints: ^3.0.1
 
